@@ -11,21 +11,21 @@ using namespace std;
 int main() {
 
   LHAPDF::Info& cfg = LHAPDF::getConfig();
-  cout << "UndefFlavorAction: " << cfg.metadata("UndefFlavorAction") << endl;
-  cout << "Verbosity: " << cfg.metadata("Verbosity") << endl;
-  cfg.setMetadata("Verbosity", 5);
+  cout << "UndefFlavorAction: " << cfg.get_entry("UndefFlavorAction") << endl;
+  cout << "Verbosity: " << cfg.get_entry("Verbosity") << endl;
+  cfg.set_entry("Verbosity", 5);
   const LHAPDF::Info& cfg2 = LHAPDF::getConfig();
-  cout << "New Verbosity from second Config: " << cfg2.metadata("Verbosity") << endl;
+  cout << "New Verbosity from second Config: " << cfg2.get_entry("Verbosity") << endl;
 
   const LHAPDF::PDFSet set("CT10nlo");
-  cout << "SetDesc: " << set.metadata("SetDesc") << endl;
-  cout << "Verbosity from set: " << set.metadata("Verbosity") << endl;
+  cout << "SetDesc: " << set.get_entry("SetDesc") << endl;
+  cout << "Verbosity from set: " << set.get_entry("Verbosity") << endl;
 
   const LHAPDF::PDFInfo info("CT10nlo", 2);
-  if (info.has_key("PdfDesc")) cout << "PdfDesc: " << info.metadata("PdfDesc") << endl;
-  cout << "PdfType: " << info.metadata("PdfType") << endl;
-  cout << "Verbosity from PDF: " << info.metadata("Verbosity") << endl;
-  vector<int> pids = info.metadata_as< vector<int> >("Flavors");
+  if (info.has_key("PdfDesc")) cout << "PdfDesc: " << info.get_entry("PdfDesc") << endl;
+  cout << "PdfType: " << info.get_entry("PdfType") << endl;
+  cout << "Verbosity from PDF: " << info.get_entry("Verbosity") << endl;
+  vector<int> pids = info.get_entry_as< vector<int> >("Flavors");
   cout << "PIDs (1): "; foreach (int f, pids) { cout << f << " "; } cout << endl;
   cout << "PIDs (2): " << LHAPDF::to_str(pids) << endl;
 
